# utcn-OpenGL-FirstPersonGoArounder

./: .gitignore  README.md
project/: CMakeLists.txt  Camera.cpp  Player.cpp  Player.hpp  Scene.cpp  Scene.hpp  main.cpp
project/shaders/: rain.frag  rain.vert  shaderStart.frag  shaderStart.vert
